# Pyplet

./: .flake8  .gitignore  .gitlab-ci.yml  .isort.cfg  .pre-commit-config.yaml  .readthedocs.yaml  AGENTS.md  LICENSE  Makefile  README.md  TESTING.md  mkdocs.yml  pyproject.toml  pytest.ini  zensical.toml
.github/: dependabot.yml
.github/workflows/: pre-commit-hook.yml  prek.yml  push-pypi.yml  test.yml
.sandbox/: Dockerfile.opencode  Makefile  docker-compose.yml
.sandbox/opencode/: opencode.jsonc
apps/: auth_rules.json  config.py
apps/examples/: chat_client.py  chat_server.py  config.py  dashboard_client.py  dashboard_server.py  desktop_client.py  frontend_only_client.py  frontend_only_server.py  numpy_client.py  numpy_server.py  sync_numpy_client.py  sync_numpy_server.py  template_server.py
apps/template/: README.md  config.py  template_client.py  template_server.py
apps/tutorial/: tutorial_client.py  tutorial_server.py
apps/tutorial/public/: vfs_file.txt
apps/tutorial/static/: static_file.txt
docs/: cli.md  getting-started.md  index.md  micro-apps.md  troubleshooting.md
docs/api/: bootstrap.md  client-utils.md  client.md  dom.md  server.md  websocket.md
docs/examples/: chat.md  dashboard.md  desktop.md  frontend-only.md  gradient-descent-playground.md  index.md  numpy-stream.md  sync-numpy.md  sync-slider.md
docs/tutorials/: frontend-only.md  websocket-app.md
images/: README.md
pyplet/: __init__.py  __main__.py  cli.py  config.py  server.py  templates.py  utils.py  websocket.py
pyplet/client/: __init__.py  utils.py  v0.py
pyplet/common/: bootstrap.py  cdn_imports.py  dom.py  utils.py
pyplet/dom/: __init__.py  bootstrap.py
pyplet/server/: __init__.py  __main__.py  _server.py  _transpiler.py  cli.py  config.py  magiclink.py  oauth.py  templates.py  web.py
pyplet/shared/: websocket.py
pyplet/shared/dom/: __init__.py  _dom.py  bootstrap.py
tests/: QUICKSTART.md  README.md  __init__.py  app_discovery_test.py  cli_test.py  client_test.py  components_test.py  config_test.py  conftest.py  package_test.py  pyscript_config_test.py  server_test.py  template_app_test.py  test_cli.py  test_template.py  test_template_app.py  transpiler_test.py
