[project]
name = "pyplet"
version = "0.0.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "authlib>=1.3.0",
    "build~=1.2.0",
    "cython>=3.1.2",
    "httpx>=0.27.0",
    "pyodide-build>=0.30.5",
    "python-minifier>=2.11.3",
    "tornado>=6.5.1",
]
authors = [
  {name = "Maxime Istasse", email = "istassem@gmail.com"},
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "selenium>=4.16.0",
]

[tool.setuptools]
packages = ["pyplet"]
include-package-data = true

[project.scripts]
pyplet = "pyplet.server.cli:script_main"

[tool.setuptools.package-data]
# Include apps/examples into pip package
pyplet = ["../apps/**/*"]
