[project]
name = "pyplet"
version = "0.0.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "python-minifier>=2.11.3",
    "tornado>=6.5.1",
    "htpy",
]
authors = [
  {name = "Maxime Istasse", email = "istassem@gmail.com"},
]

[tool.setuptools]
packages = ["pyplet"]
include-package-data = true

[dependency-groups]
dev = [
    "build~=1.2.0",
    "cython>=3.1.2",
    "pyodide-build>=0.30.5",
]

examples = [
    "matplotlib>=3.10.5",
    "numpy>=2.3.2",
]

# Documentation dependencies
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.26.0",
    "pymdown-extensions>=10.7",
]

[project.scripts]
pyplet = "pyplet.server.cli:script_main"

[tool.setuptools.package-data]
# Include apps/examples into pip package
pyplet = ["../apps/**/*"]

[tool.black]
verbose = true
line-length = 79
target-version = ['py312', 'py313', 'py314']
include = '.pyi?$'
exclude = '''
/(
    .git
    | .hg
    | .mypy_cache
    | .tox
    | .venv
    | _build
    | buck-out
    | build
    | dist
)/
'''

[tool.ruff]
builtins = ["_"]
# cache-dir = "~/.cache/ruff"
exclude = [".venv", "**/build"]
line-length = 79
fix = true
indent-width = 4
respect-gitignore = false
show-fixes = true
src = ["src"]
target-version = "py312"
unsafe-fixes = false

[tool.ruff.analyze]
detect-string-imports = true

[tool.ruff.format]
# Enable reformatting of code snippets in docstrings.
docstring-code-format = true
docstring-code-line-length = 79
# Enable reformatting of code snippets in comments.
indent-style = "space"
line-ending = "lf"
